# ddsl

./: .gitignore  Cargo.toml  README.md  pom.xml
ddsl-cli/: pom.xml
ddsl-cli/src/main/java/city/fini/ddsl/cli/: DdslCli.java
ddsl-cli/src/main/java/ie/bitstep/ddsl/cli/: DdslCli.java
ddsl-core/: pom.xml
ddsl-core/src/main/java/city/fini/ddsl/: DdslCompiler.java
ddsl-core/src/main/java/city/fini/ddsl/ast/: Ast.java
ddsl-core/src/main/java/city/fini/ddsl/diagnostics/: DdslException.java  Diagnostic.java  DiagnosticRenderer.java  Span.java
ddsl-core/src/main/java/city/fini/ddsl/generator/: DockerfileGenerator.java
ddsl-core/src/main/java/city/fini/ddsl/metadata/: Metadata.java
ddsl-core/src/main/java/city/fini/ddsl/model/: Model.java
ddsl-core/src/main/java/ie/bitstep/ddsl/: DdslCompiler.java
ddsl-core/src/test/java/city/fini/ddsl/: DdslCompilerTest.java
ddsl-core/src/test/java/ie/bitstep/ddsl/: DdslCompilerTest.java
ddsl-maven-plugin/: pom.xml
examples/: go.dsl  java.dsl  node.dsl  python.dsl
examples/errors/: hyphenated-stage.dsl  missing-stage-as.dsl  quoted-copy-artifact.dsl  quoted-produced-artifact.dsl
expected/: go.Dockerfile  java.Dockerfile  node.Dockerfile  python.Dockerfile
expected/errors/: hyphenated-stage.err  missing-stage-as.err  quoted-copy-artifact.err  quoted-produced-artifact.err
scripts/: ddsl  ddsl.cmd
src/: ast.rs  error.rs  grammar.pest  lib.rs  main.rs  metadata.rs  model.rs  parser.rs  semantics.rs  validate.rs
src/generator/: dockerfile.rs  mod.rs
tests/: compiler.rs
(+20 files in other folders)
