[package]
name = "ddsl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Intent-driven container build DSL to Dockerfile compiler"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"

[dev-dependencies]
insta = "1.39"

[[bin]]
name = "transpiler"
path = "src/main.rs"
